<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="com.deeksha.androidkotlintraining.ui.auth.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/loginParentCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity">

        <TextView
            android:id="@+id/errorHeadingTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:accessibilityLiveRegion="polite"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-medium"
            android:padding="12.5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@{loginViewModel.errorMsg}"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="@{loginViewModel.errorMsg != null ? View.VISIBLE : View.GONE }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorHeadingTV">

            <TextView
                android:id="@+id/loginTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_login_label_description"
                android:text="@string/account_login_label"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/emailLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/email_label"
                android:labelFor="@id/emailEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginTitleLabel" />


            <com.deeksha.androidkotlintraining.utils.customui.CustomET
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email_label"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@={loginViewModel.email}"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginTitleLabel" />

            <TextView
                android:id="@+id/passwordLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/password_hint_label"
                android:labelFor="@id/passwordEditText"
                app:layout_constraintEnd_toEndOf="@id/emailEditText"
                app:layout_constraintStart_toStartOf="@id/emailEditText"
                app:layout_constraintTop_toBottomOf="@id/emailEditText" />


            <com.deeksha.androidkotlintraining.utils.customui.CustomET
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint_label"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@={loginViewModel.password}"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@id/emailEditText"
                app:layout_constraintStart_toStartOf="@id/emailEditText"
                app:layout_constraintTop_toBottomOf="@id/emailEditText" />

            <CheckBox
                android:id="@+id/rememberMeCB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/colorBtnBG"
                android:contentDescription="@string/remember_me_label"
                android:fontFamily="sans-serif-light"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:onCheckedChanged="@{(compoundButton, checked) -> loginViewModel.onCheckedChange(compoundButton, checked)}"
                android:padding="5dp"
                android:text="@string/remember_me_label"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/emailEditText"
                app:layout_constraintStart_toStartOf="@id/emailEditText"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

            <com.deeksha.androidkotlintraining.utils.customui.CustomBtn
                android:id="@+id/loginBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:elevation="4dp"
                android:onClick="@{loginViewModel::onLoginButtonClick}"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/login_btn_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="@id/passwordEditText"
                app:layout_constraintStart_toStartOf="@id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@id/rememberMeCB" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>